RESOLVED FIXED29808
[Qt] assertions to be visible on Symbian
https://bugs.webkit.org/show_bug.cgi?id=29808
Summary [Qt] assertions to be visible on Symbian
Janne Koskinen
Reported 2009-09-28 08:32:33 PDT
Created attachment 40236 [details] vprintf patch Qt port of Symbian uses Open C to access posix libraries. assertions.h uses vprintf to print out the assert messages into stderr. In Open C stderr prints are lost somewhere and only stdout can be seen from log files. This change that makes assert messages to be visible on Symbian.
Attachments
vprintf patch (1.09 KB, patch)
2009-09-28 08:32 PDT, Janne Koskinen
ddkilzer: review-
vprintf patch second attempt (1.09 KB, patch)
2009-09-29 00:38 PDT, Janne Koskinen
no flags
vprintf patch third attempt (1.14 KB, patch)
2009-09-29 00:48 PDT, Janne Koskinen
no flags
David Kilzer (:ddkilzer)
Comment 1 2009-09-28 16:35:00 PDT
Comment on attachment 40236 [details] vprintf patch > diff --git a/JavaScriptCore/ChangeLog b/JavaScriptCore/ChangeLog > index f6a644a..894ff9a 100644 > --- a/JavaScriptCore/ChangeLog > +++ b/JavaScriptCore/ChangeLog > @@ -1,3 +1,15 @@ > +2009-09-28 Janne Koskinen <janne.p.koskinen@digia.com> > + > + Reviewed by NOBODY (OOPS!). > + > + [Qt] Assert messages prints visible in Symbian > + > + Asserts use vprintf to print the messages to stderr. > + In Symbian Open C it is not possible to see stderr so > + I routed the messages to stdout instead. > + > + * wtf/Assertions.cpp: > + Please include a reference to the bug URL in the ChangeLog entry. > +#ifdef PLATFORM(SYMBIAN) This should be: #if PLATFORM(SYMBIAN) r- to address the above issues.
Janne Koskinen
Comment 2 2009-09-29 00:38:50 PDT
Created attachment 40286 [details] vprintf patch second attempt Corrected patch based on review comments.
Janne Koskinen
Comment 3 2009-09-29 00:48:38 PDT
Created attachment 40287 [details] vprintf patch third attempt Corrected based on review comments. Added bug url and changed to use #if instead of #ifdef.
David Kilzer (:ddkilzer)
Comment 4 2009-09-29 09:01:23 PDT
Comment on attachment 40287 [details] vprintf patch third attempt r=me
WebKit Commit Bot
Comment 5 2009-09-29 09:10:30 PDT
Comment on attachment 40287 [details] vprintf patch third attempt Clearing flags on attachment: 40287 Committed r48878: <http://trac.webkit.org/changeset/48878>
WebKit Commit Bot
Comment 6 2009-09-29 09:10:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.