2009-09-29  Janne Koskinen  <janne.p.koskinen@digia.com>

Reviewed by David Kilzer.

        [Qt] Assert messages prints visible in Symbian
        https://bugs.webkit.org/show_bug.cgi?id=29808

        Asserts use vprintf to print the messages to stderr.
        In Symbian Open C it is not possible to see stderr so
        I routed the messages to stdout instead.

        * wtf/Assertions.cpp:

Canonical link: https://commits.webkit.org/40438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48878 268f45cc-cd09-0410-ab3c-d52691b4dbfc